# realtime-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  setup.cfg
app/: alerts.py  main.py  settings.py
