[tool.poetry]
name = "realtime-backend"
version = "0.1.0"
description = ""
authors = ["Andrew Kliuchnikov <andrewkliuchnikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
websockets = "^10.4"
redis = {extras = ["hiredis"], version = "^4.5.1"}
uvicorn = "^0.20.0"
broadcaster = {extras = ["redis"], version = "^0.2.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
